# onyx-terminal

./: .gitignore  JPMOnyxTerminal.jsx  Makefile  README-INTEGRATION.md  README.md  SETUP.md  TODO.md  capacitor.config.ts  docker-compose.yml  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.sweep.json  vercel.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml
api/: exa-contents.js  exa-search.js  ff-factors.js
e2e/: auth-flow.spec.ts  chart-render.spec.ts  compliance-audit.spec.ts  order-ticket.spec.ts  settings-panels.spec.ts
pact/: clearinghouse.pact  compliance.pact  order-book.pact
public/: imo-macro-sw.js
schemas/: messages.json  messages.ts
scripts/: check-imports.cjs  pre-commit-hook.sh
sequencer/: Cargo.toml  README.md
sequencer/config/: sequencer.toml
sequencer/src/: config.rs  consensus.rs  gateway.rs  main.rs  marketdata.rs  matcher.rs  pact_client.rs  ring_buffer.rs  risk.rs  schemas.rs
services/agent/: .env.example  Dockerfile  README.md  openapi.yaml  package.json
services/executor/: .env.example  Dockerfile  README.md  openapi.yaml  package.json  schema.sql
services/scanner/: Dockerfile  README.md  requirements.txt
services/tick-ingestion/: .env.example  Dockerfile  README.md  openapi.yaml  requirements.txt
src/: index.css  main.jsx  vite-env.d.ts
src/components/: ai-agent-panel.jsx  ai-markdown.jsx  ai-trade-idea-backtester-tab.jsx  alpha-arena-page.jsx  basket-components.jsx  budget-page.jsx  chart-page.jsx  chart-picker.jsx  chart-with-subcharts.jsx  compact-tabs.jsx  create-account-modal.jsx  feed-page.jsx  instrument-header.jsx  (+17 more)
(+126 files in other folders)
