[package]
name = "jpm-onyx-sequencer"
version = "0.1.0"
edition = "2021"
authors = ["JPM Onyx Engineering"]
description = "Sub-ms order sequencer for JPM Onyx Chainweb derivatives platform"

[dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Lock-free data structures (LMAX Disruptor pattern)
crossbeam = "0.8"
crossbeam-queue = "0.3"
parking_lot = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"              # MessagePack for hot path
bytes = "1.7"

# Crypto for BFT + mTLS
blake2 = "0.10"
ed25519-dalek = "2.1"
rustls = "0.23"
rustls-pemfile = "2.1"

# Time & identity
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "fast-rng"] }

# Metrics & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
metrics = "0.23"

# Pact RPC client
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }

# Config
config = "0.14"
clap = { version = "4.5", features = ["derive"] }

# Rate limiting / back-pressure
governor = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
debug = false
strip = true

# Performance-critical — pin ring buffer + matcher to specific cores
[profile.release.package.crossbeam-queue]
opt-level = 3

[[bin]]
name = "sequencer"
path = "src/main.rs"
